--- a/src/templates/combat/combatant_actions.hbs
+++ b/src/templates/combat/combatant_actions.hbs
@@ -1,8 +1,15 @@
-{{#each actionsUsed as |actionUsed|}}
-{{log actionUsed}}
-<i class="inline-control combatant-control icon cosmere-icon actions-used">{{actionUsed}}</i>
+{{#each actionsUsed as |usedAction|}}
+{{log usedAction}}
+<button type="button" class="inline-control combatant-control icon fa-solid cosmere-icon actions-used" action-name="{{usedAction.name}}" action-cost="{{usedAction.cost}}">
+    <i class = "cosmere-icon">{{usedAction.cost}}</i>
+</button>
 {{/each}}
 {{log actionsLeft}}
 {{#if (gt actionsLeft 0)}}
-<i class="inline-control combatant-control icon cosmere-icon actions-left">{{actionsLeft}}</i>
+<button type="button" class="inline-control combatant-control icon fa-solid active actions-left">
+    <i class = "cosmere-icon">{{actionsLeft}}</i>
+</button>
 {{/if}}
+<button type="button" class="inline-control combatant-control icon fa-solid cosmere-icon {{#unless reactionUsed}}active{{/unless}} reaction-used">
+    <i class = "cosmere-icon">r</i>
+</button>
