--- a/src/templates/combat/combatant_actions_boss_fast.hbs
+++ b/src/templates/combat/combatant_actions_boss_fast.hbs
@@ -1,11 +1,11 @@
-{{#each actionsUsed as |usedAction|}}
+{{#each bossFastActionsUsed as |usedAction|}}
 <button type="button" class="inline-control combatant-control icon fa-solid cosmere-icon actions-used" action-name="{{usedAction.name}}" action-cost="{{usedAction.cost}}">
     <i class = "cosmere-icon">{{usedAction.cost}}</i>
 </button>
 {{/each}}
-{{#if (gt actionsLeft 0)}}
+{{#if (gt bossFastActionsLeft 0)}}
 <button type="button" class="inline-control combatant-control icon fa-solid active actions-left">
-    <i class = "cosmere-icon">{{actionsLeft}}</i>
+    <i class = "cosmere-icon">{{bossFastActionsLeft}}</i>
 </button>
 {{/if}}
 <button type="button" class="inline-control combatant-control icon fa-solid cosmere-icon {{#unless reactionUsed}}active{{/unless}} reaction-used">
