--- a/src/templates/combat/combatant_actions.hbs
+++ b/src/templates/combat/combatant_actions.hbs
@@ -1,13 +1,30 @@
-<button type="button" class="inline-control combatant-control icon fa-solid cosmere-icon {{#unless reactionUsed}}active{{/unless}} reaction-used" data-action="toggleReaction" data-tooltip="cosmere-advanced-encounters.toggle_reaction">
+{{#each reactionsAvailable as |availableReaction|}}
+<button type="button" class="inline-control combatant-control icon fa-solid cosmere-icon active reactions-available"
+    data-action="useReaction"
+    data-tooltip="cosmere-advanced-encounters.use_reaction">
     <i class = "cosmere-icon">r</i>
 </button>
-{{#if (gt actionsLeft 0)}}
-<button type="button" class="inline-control combatant-control icon fa-solid active actions-left" data-action="useAction" data-tooltip="cosmere-advanced-encounters.actions_remaining">
-    <i class = "cosmere-icon">{{actionsLeft}}</i>
+{{/each}}
+{{#each reactionsUsed as |usedReaction|}}
+<button type="button" class="inline-control combatant-control icon fa-solid cosmere-icon reaction-used"
+    data-action="restoreReaction"
+    data-tooltip-text="{{localize "cosmere-advanced-encounters.restore_reaction"}}: {{usedReaction.name}}"
+    action-name="{{usedReaction.name}}">
+    <i class = "cosmere-icon">r</i>
+</button>
+{{/each}}
+{{#each actionsAvailableGroups as |availableActionGroup|}}
+<button type="button" class="inline-control combatant-control icon fa-solid active actions-available"
+    data-action="useAction"
+    data-tooltip="cosmere-advanced-encounters.actions_remaining">
+    <i class = "cosmere-icon">{{availableActionGroup.count}}</i>
 </button>
 {{/if}}
 {{#each actionsUsed as |usedAction|}}
-<button type="button" class="inline-control combatant-control icon fa-solid cosmere-icon actions-used" data-action="restoreAction" data-tooltip-text="{{localize "cosmere-advanced-encounters.revert_used_action"}}: {{usedAction.name}}" action-name="{{usedAction.name}}" action-cost="{{usedAction.cost}}">
+<button type="button" class="inline-control combatant-control icon fa-solid cosmere-icon actions-used"
+    data-action="restoreAction"
+    data-tooltip-text="{{localize "cosmere-advanced-encounters.restore_action"}}: {{usedAction.name}}"
+    action-name="{{usedAction.name}}" action-cost="{{usedAction.cost}}">
     <i class = "cosmere-icon">{{usedAction.cost}}</i>
 </button>
 {{/each}}
