--- a/src/templates/combat/combatant_actions.hbs
+++ b/src/templates/combat/combatant_actions.hbs
@@ -1,30 +1,40 @@
-{{#each reactionsAvailable as |availableReaction|}}
-<button type="button" class="inline-control combatant-control icon fa-solid cosmere-icon active reactions-available"
-    data-action="useReaction"
-    data-tooltip="cosmere-advanced-encounters.use_reaction">
-    <i class = "cosmere-icon">r</i>
-</button>
-{{/each}}
-{{#each reactionsUsed as |usedReaction|}}
-<button type="button" class="inline-control combatant-control icon fa-solid cosmere-icon reaction-used"
-    data-action="restoreReaction"
-    data-tooltip-text="{{localize "cosmere-advanced-encounters.restore_reaction"}}: {{usedReaction.name}}"
-    action-name="{{usedReaction.name}}">
-    <i class = "cosmere-icon">r</i>
-</button>
-{{/each}}
-{{#each actionsAvailableGroups as |availableActionGroup|}}
-<button type="button" class="inline-control combatant-control icon fa-solid active actions-available"
-    data-action="useAction"
-    data-tooltip="cosmere-advanced-encounters.actions_remaining">
-    <i class = "cosmere-icon">{{availableActionGroup.count}}</i>
-</button>
-{{/if}}
-{{#each actionsUsed as |usedAction|}}
-<button type="button" class="inline-control combatant-control icon fa-solid cosmere-icon actions-used"
-    data-action="restoreAction"
-    data-tooltip-text="{{localize "cosmere-advanced-encounters.restore_action"}}: {{usedAction.name}}"
-    action-name="{{usedAction.name}}" action-cost="{{usedAction.cost}}">
-    <i class = "cosmere-icon">{{usedAction.cost}}</i>
-</button>
-{{/each}}
+<div class="combatant-controls flexrow">
+    {{#each reactionsAvailable as |availableReaction|}}
+        {{#if (gt availableReaction.remaining 0)}}
+            <button type="button" class="inline-control combatant-control icon fa-solid cosmere-icon active reactions-available"
+                data-action="useReaction"
+                data-tooltip="cosmere-advanced-encounters.use_reaction"
+                action-group-name="{{availableReaction.name}}">
+                <i class = "cosmere-icon">r</i>
+            </button>
+        {{/if}}
+    {{/each}}
+    {{#each reactionsUsed as |usedReaction|}}
+        <button type="button" class="inline-control combatant-control icon fa-solid cosmere-icon reaction-used"
+            data-action="restoreReaction"
+            data-tooltip-text="{{localize "cosmere-advanced-encounters.restore_reaction"}}: {{usedReaction.name}}"
+            action-group-name = "{{usedReaction.actionGroupUsedFromName}}"
+            action-name="{{usedReaction.name}}">
+            <i class = "cosmere-icon">r</i>
+        </button>
+    {{/each}}
+    {{#each actionsAvailableGroups as |availableActionGroup|}}
+        {{#if (gt availableActionGroup.remaining 0)}}
+            <button type="button" class="inline-control combatant-control icon fa-solid active actions-available"
+                data-action="useAction"
+                data-tooltip="cosmere-advanced-encounters.actions_remaining"
+                action-group-name="{{availableActionGroup.name}}">
+                <i class = "cosmere-icon">{{availableActionGroup.remaining}}</i>
+            </button>
+        {{/if}}
+    {{/each}}
+    {{#each actionsUsed as |usedAction|}}
+        <button type="button" class="inline-control combatant-control icon fa-solid cosmere-icon actions-used"
+            data-action="restoreAction"
+            data-tooltip-text="{{localize "cosmere-advanced-encounters.restore_action"}}: {{usedAction.name}}"
+            action-group-name = "{{usedAction.actionGroupUsedFromName}}"
+            action-name="{{usedAction.name}}" action-cost="{{usedAction.cost}}">
+            <i class = "cosmere-icon">{{usedAction.cost}}</i>
+        </button>
+    {{/each}}
+</div>
