--- a/src/templates/combat/combatant_actions.hbs
+++ b/src/templates/combat/combatant_actions.hbs
@@ -22,7 +22,7 @@
         {{#if (gt availableActionGroup.remaining 0)}}
             <button type="button" class="inline-control combatant-control icon fa-solid active actions-available"
                 data-action="useAction"
-                data-tooltip="cosmere-advanced-encounters.actions_remaining"
+                data-tooltip="cosmere-advanced-encounters.use_action"
                 action-group-name="{{availableActionGroup.name}}">
                 <i class = "cosmere-icon">{{availableActionGroup.remaining}}</i>
             </button>
