--- a/src/templates/combat/combatant_actions.hbs
+++ b/src/templates/combat/combatant_actions.hbs
@@ -37,4 +37,21 @@
             <i class = "cosmere-icon">{{usedAction.cost}}</i>
         </button>
     {{/each}}
+    {{#each freeActionsUsed as |usedAction|}}
+        <button type="button" class="inline-control combatant-control icon fa-solid cosmere-icon actions-used"
+            data-action="restoreFreeAction"
+            data-tooltip-text="{{localize "cosmere-advanced-encounters.remove_action"}}: {{usedAction.name}}"
+            action-group-name = "{{usedAction.actionGroupUsedFromName}}"
+            action-name="{{usedAction.name}}">
+            <i class = "cosmere-icon">0</i>
+        </button>
+    {{/each}}
+    {{#each specialActionsUsed as |usedAction|}}
+        <button type="button" class="inline-control combatant-control icon fa-solid cosmere-icon actions-used"
+            data-action="restoreSpecialAction"
+            data-tooltip-text="{{localize "cosmere-advanced-encounters.remove_action"}}: {{usedAction.name}}"
+            action-name="{{usedAction.name}}">
+            <i class = "cosmere-icon">*</i>
+        </button>
+    {{/each}}
 </div>
