--- a/src/templates/combat/combatant_actions.hbs
+++ b/src/templates/combat/combatant_actions.hbs
@@ -11,7 +11,9 @@
     {{/each}}
     {{#each reactionsUsed as |usedReaction|}}
         <button type="button" class="inline-control combatant-control icon fa-solid cosmere-icon reaction-used"
+            {{#if (allowRestoreButtonAction @root.combatantId)}}
             data-action="restoreReaction"
+            {{/if}}
             data-tooltip-text="{{localize "cosmere-advanced-encounters.restore_reaction"}}: {{usedReaction.name}}"
             action-group-name = "{{usedReaction.actionGroupUsedFromName}}"
             action-name="{{usedReaction.name}}">
@@ -30,7 +32,9 @@
     {{/each}}
     {{#each actionsUsed as |usedAction|}}
         <button type="button" class="inline-control combatant-control icon fa-solid cosmere-icon actions-used"
+            {{#if (allowRestoreButtonAction @root.combatantId)}}
             data-action="restoreAction"
+            {{/if}}
             data-tooltip-text="{{localize "cosmere-advanced-encounters.restore_action"}}: {{usedAction.name}}"
             action-group-name = "{{usedAction.actionGroupUsedFromName}}"
             action-name="{{usedAction.name}}" action-cost="{{usedAction.cost}}">
@@ -39,7 +43,9 @@
     {{/each}}
     {{#each freeActionsUsed as |usedAction|}}
         <button type="button" class="inline-control combatant-control icon fa-solid cosmere-icon actions-used"
+            {{#if (allowRestoreButtonAction @root.combatantId)}}
             data-action="restoreFreeAction"
+            {{/if}}
             data-tooltip-text="{{localize "cosmere-advanced-encounters.remove_action"}}: {{usedAction.name}}"
             action-group-name = "{{usedAction.actionGroupUsedFromName}}"
             action-name="{{usedAction.name}}">
@@ -48,7 +54,9 @@
     {{/each}}
     {{#each specialActionsUsed as |usedAction|}}
         <button type="button" class="inline-control combatant-control icon fa-solid cosmere-icon actions-used"
+            {{#if (allowRestoreButtonAction @root.combatantId)}}
             data-action="restoreSpecialAction"
+            {{/if}}
             data-tooltip-text="{{localize "cosmere-advanced-encounters.remove_action"}}: {{usedAction.name}}"
             action-name="{{usedAction.name}}">
             <i class = "cosmere-icon">*</i>
